--- a/package.json
+++ b/package.json
@@ -1,21 +1,48 @@
 {
-  "name": "react-template",
-  "version": "1.0.0",
-  "description": "React starter template, with custom Webpack 5 and babel setup.",
-  "main": "webpack.config.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Romkin7/react-template.git"
-  },
-  "scripts": {
-    "test": "jest",
-    "start": "webpack"
-  },
-  "keywords": [],
-  "author": {
-    "email": "devdesignrt@gmail.com",
-    "name": "DevDesign",
-    "url": "https://www.devdesign.fi"
-  },
-  "license": "ISC"
+    "name": "react-template",
+    "version": "1.0.0",
+    "description": "React starter template, with custom Webpack 5 and babel setup.",
+    "main": "webpack.config.js",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Romkin7/react-template.git"
+    },
+    "scripts": {
+        "test": "jest",
+        "serve": "webpack serve --mode development",
+        "build": "webpack --mode production"
+    },
+    "keywords": [],
+    "author": {
+        "email": "devdesignrt@gmail.com",
+        "name": "DevDesign",
+        "url": "https://www.devdesign.fi"
+    },
+    "license": "ISC",
+    "dependencies": {
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.19.6",
+        "@babel/preset-env": "^7.19.4",
+        "@babel/preset-react": "^7.18.6",
+        "babel-loader": "^9.0.1",
+        "css-loader": "^6.7.1",
+        "eslint": "^8.26.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-react": "^7.31.10",
+        "file-loader": "^6.2.0",
+        "html-webpack-plugin": "^5.5.0",
+        "mini-css-extract-plugin": "^2.6.1",
+        "prettier": "^2.7.1",
+        "style-loader": "^3.3.1",
+        "stylelint": "^14.14.0",
+        "stylelint-config-prettier-scss": "^0.0.1",
+        "stylelint-config-sass-guidelines": "^9.0.1",
+        "stylelint-config-standard": "^29.0.0",
+        "webpack": "^5.74.0",
+        "webpack-cli": "^4.10.0"
+    }
 }
