--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
         "@babel/core": "^7.19.6",
         "@babel/preset-env": "^7.19.4",
         "@babel/preset-react": "^7.18.6",
+        "@babel/preset-typescript": "^7.18.6",
+        "@types/react": "^18.0.24",
+        "@types/react-dom": "^18.0.8",
         "babel-loader": "^9.0.1",
         "css-loader": "^6.7.1",
         "eslint": "^8.26.0",
@@ -42,7 +45,10 @@
         "stylelint-config-prettier-scss": "^0.0.1",
         "stylelint-config-sass-guidelines": "^9.0.1",
         "stylelint-config-standard": "^29.0.0",
+        "ts-loader": "^9.4.1",
+        "typescript": "^4.8.4",
         "webpack": "^5.74.0",
-        "webpack-cli": "^4.10.0"
+        "webpack-cli": "^4.10.0",
+        "webpack-dev-server": "^4.11.1"
     }
 }
