--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,28 @@
 {
-    "root": true,
-    "parserOptions": {
-        "ecmaVersion": 12,
-        "sourceType": "script"
-    },
-    "extends": ["eslint:recommended", "prettier", "plugin:react/recommended"],
     "env": {
-        "es2021": true,
-        "browser": true
+        "browser": true,
+        "es2021": true
     },
+    "settings": {
+        "react": {
+            "version": "detect"
+        }
+    },
+    "extends": [
+        "eslint:recommended",
+        "prettier",
+        "plugin:react/recommended",
+        "plugin:@typescript-eslint/recommended"
+    ],
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+        "ecmaFeatures": {
+            "jsx": true
+        },
+        "ecmaVersion": "latest",
+        "sourceType": "module"
+    },
+    "plugins": ["react", "@typescript-eslint"],
     "rules": {
         "no-console": "error",
         "no-await-in-loop": "error"
