--- a/package.json
+++ b/package.json
@@ -7,10 +7,16 @@
         "type": "git",
         "url": "git+https://github.com/Romkin7/react-template.git"
     },
+    "engines": {
+        "node": "16.14.0",
+        "yarn": "^1.22.19"
+    },
     "scripts": {
         "test": "jest",
         "serve": "webpack serve --mode development",
-        "build": "webpack --mode production"
+        "build": "webpack --mode production",
+        "lint": "eslint src/**/*.tsx --ext .ts{x} --no-ignore && npm run stylelint",
+        "stylelint": "stylelint 'src/**/**/*.scss' 'src/*.scss'"
     },
     "keywords": [],
     "author": {
@@ -28,23 +34,34 @@
         "@babel/preset-env": "^7.19.4",
         "@babel/preset-react": "^7.18.6",
         "@babel/preset-typescript": "^7.18.6",
+        "@testing-library/jest-dom": "^5.16.5",
+        "@testing-library/react": "^13.4.0",
         "@types/react": "^18.0.24",
         "@types/react-dom": "^18.0.8",
+        "@typescript-eslint/eslint-plugin": "^5.42.0",
+        "@typescript-eslint/parser": "^5.42.0",
         "babel-loader": "^9.0.1",
         "css-loader": "^6.7.1",
+        "css-modules-typescript-loader": "^4.0.1",
         "eslint": "^8.26.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-react": "^7.31.10",
         "file-loader": "^6.2.0",
         "html-webpack-plugin": "^5.5.0",
+        "jest": "^29.2.2",
+        "jest-environment-jsdom": "^29.2.2",
         "mini-css-extract-plugin": "^2.6.1",
         "prettier": "^2.7.1",
+        "sass": "^1.55.0",
+        "sass-loader": "^13.1.0",
         "style-loader": "^3.3.1",
         "stylelint": "^14.14.0",
         "stylelint-config-prettier-scss": "^0.0.1",
         "stylelint-config-sass-guidelines": "^9.0.1",
         "stylelint-config-standard": "^29.0.0",
+        "svg-url-loader": "^8.0.0",
+        "ts-jest": "^29.0.3",
         "ts-loader": "^9.4.1",
         "typescript": "^4.8.4",
         "webpack": "^5.74.0",
