--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
         "url": "git+https://github.com/Romkin7/react-template.git"
     },
     "engines": {
-        "node": "16.14.0",
+        "node": "^16.14.0",
         "yarn": "^1.22.19"
     },
     "scripts": {
         "test": "jest",
-        "serve": "webpack serve --mode development",
-        "build": "webpack --mode production",
-        "lint": "eslint src/**/*.tsx --ext .ts{x} --no-ignore && npm run stylelint",
+        "start": "webpack serve --mode development --open",
+        "build": "yarn lint && yarn test && webpack --mode production",
+        "format:check": "prettier --check \"src/**/*.ts*\"",
+        "format:write": "prettier --write \"src/**/*.ts*\"",
+        "lint": "yarn format:check && eslint src/**/*.tsx --ext .ts{x} --no-ignore && npm run stylelint",
         "stylelint": "stylelint 'src/**/**/*.scss' 'src/*.scss'"
     },
     "keywords": [],
@@ -67,5 +69,12 @@
         "webpack": "^5.74.0",
         "webpack-cli": "^4.10.0",
         "webpack-dev-server": "^4.11.1"
+    },
+    "prettier": {
+        "tabWidth": 4,
+        "singleQuote": true,
+        "trailingComma": "all",
+        "arrowParens": "always",
+        "proseWrap": "always"
     }
 }
