--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,5 @@
         "noEmit": false,
         "jsx": "react-jsx"
     },
-    "include": ["src", "declarations.d.ts"]
+    "include": ["src", "declarations.d.ts", "scss.d.ts"]
 }
