--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     },
     "scripts": {
         "test": "jest",
-        "start": "webpack serve --mode development --open",
+        "start": "webpack serve --mode development",
         "build": "yarn lint && yarn test && webpack --mode production",
         "format:check": "prettier --check \"src/**/*.ts*\"",
         "format:write": "prettier --write \"src/**/*.ts*\"",
@@ -29,6 +29,7 @@
     "license": "ISC",
     "dependencies": {
         "react": "^18.2.0",
+        "react-dev-utils": "^12.0.1",
         "react-dom": "^18.2.0"
     },
     "devDependencies": {
@@ -39,6 +40,7 @@
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@types/react": "^18.0.24",
+        "@types/react-dev-utils": "^9.0.11",
         "@types/react-dom": "^18.0.8",
         "@typescript-eslint/eslint-plugin": "^5.42.0",
         "@typescript-eslint/parser": "^5.42.0",
